# OmniRay-AVX2-Accelerated-Deep-RL-Spatial-Discovery-Engine

./: .gitignore  README.md  config.yaml  evaluate_and_record.py  requirements.txt  run_ablation_study.py  test_env.py  train_rl.py  visualize_agent.py
envs/: __init__.py  active_slam_env.py  adaptive_env.py  adaptive_reward.py  continual_learner.py  curriculum.py  health_monitor.py  meta_policy.py  raycaster_backends.py  vector_slam.py
profiling/: __init__.py  benchmark_bottleneck.py  benchmark_slam.py
sim/: CMakeLists.txt  test_raycaster.py
sim/src/: bindings.cpp  raycaster.cpp  raycaster.h
